objects/HRA_Administration__c.object
<CustomObject>
    <description>Child to QuoteLineItem for ANA / LG CDHP Admin</description>
    <fields>
        <fullName>Account_Effective_Date_Plus_X__c</fullName>
        <formula>QLI__r.Quote.Opportunity.CloseDate + 15</formula>
        <label>Account Effective Date Plus X</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accum_Reset_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accum Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Rollover_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Rollover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AllocationEA__c</fullName>
        <label>AllocationEA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllocationEChildren__c</fullName>
        <label>AllocationEChildren</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllocationEE__c</fullName>
        <label>AllocationEE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllocationFamily__c</fullName>
        <label>AllocationFamily</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_EChild__c</fullName>
        <label>Allocation EChild</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Allocation_Tiers__c</fullName>
        <label>Annual Allocation Tiers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 Tier</fullName>
                </value>
                <value>
                    <fullName>3 Tier</fullName>
                </value>
                <value>
                    <fullName>4 Tier</fullName>
                </value>
                <value>
                    <fullName>5 Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Accumulations__c</fullName>
        <label>Benefit Accumulations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Benefit Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CapEA__c</fullName>
        <label>CapEA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CapEChild__c</fullName>
        <label>CapEChild</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CapEChildren__c</fullName>
        <label>CapEChildren</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CapEE__c</fullName>
        <label>CapEE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CapEFamily__c</fullName>
        <label>CapEFamily</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Run_Out_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Run-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Covered_Services__c</fullName>
        <label>Covered Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Pay Medical</fullName>
                </value>
                <value>
                    <fullName>In Network Medical Deductible</fullName>
                </value>
                <value>
                    <fullName>Out of Network Medical Deductible</fullName>
                </value>
                <value>
                    <fullName>In Network Coinsurance</fullName>
                </value>
                <value>
                    <fullName>Out of Network Coinsurance</fullName>
                </value>
                <value>
                    <fullName>In Network Copays</fullName>
                </value>
                <value>
                    <fullName>Out of Network Copays</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Member_Responbsibility__c</fullName>
        <label>Custom Member Responbsibility</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_Card_Services__c</fullName>
        <label>Debit Card Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Rollover_Date_Fund__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Desired Rollover Date Fund</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>During_claims_run_out__c</fullName>
        <label>During claims run out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Funds_Rollover_Next_Plan_Year__c</fullName>
        <label>Employee Funds Rollover Next Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All (100%)</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Cap Amount</fullName>
                </value>
                <value>
                    <fullName>Percent Up to Cap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_required_if_LG_under_250__c</fullName>
        <description>Exception required if LG under 250. Has exception been granted?</description>
        <label>Exception required if LG under 250.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Accumulators_And_HRA_Allocation__c</fullName>
        <label>Group Accumulators And HRA Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year benefits renewing 1/1</fullName>
                </value>
                <value>
                    <fullName>Plan Year benefits</fullName>
                </value>
                <value>
                    <fullName>Calendar year benefits renewing mid year (any date except 1/1)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRA1_Group_Suffix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA1: Group Suffix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRA_Funds_Pro_Rate_on_Entry_Date__c</fullName>
        <label>HRA Funds Pro Rate on Entry Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Not Pro-Rated/Incentive Only HRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRA_Funds_to_Employees_and_on_what_basis__c</fullName>
        <label>HRA Funds to Employees and on what basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No, Annually</fullName>
                </value>
                <value>
                    <fullName>No, Incentive Only HRA</fullName>
                </value>
                <value>
                    <fullName>Yes, Monthly</fullName>
                </value>
                <value>
                    <fullName>Yes, Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yes, Semi-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRA_LITES_Rollover__c</fullName>
        <label>HRA LITES Rollover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRA_Rollover_Time_Period__c</fullName>
        <label>HRA Rollover Time Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days (default)</fullName>
                    <default>true</default>
                    <label>90 days (default)</label>
                </value>
                <value>
                    <fullName>120 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRA_Rollover__c</fullName>
        <label>HRA Rollover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRA_Split_Percentage__c</fullName>
        <label>HRA Split Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRA_Upfront_Deductible__c</fullName>
        <label>HRA Upfront Deductible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Individual_Deductible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Individual Deductible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Activities_Incentives__c</fullName>
        <label>Health Activities Incentives</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Incentive_Type__c</fullName>
        <label>Health Incentive Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incentives Earned In Addition to the Employer HRA Allocation</fullName>
                </value>
                <value>
                    <fullName>Fully Insured Health Incentive Account Plus</fullName>
                </value>
                <value>
                    <fullName>Incentive HRA Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Other_Please_Specify__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other Please Specify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Deductible_Amount__c</fullName>
        <label>Individual Deductible Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_RX_Covered_Under_HRA__c</fullName>
        <formula>IF
(
	OR
	(
		AND
		(
			ISPICKVAL(Type_of_HRA__c,&apos;Member Pay (debit card) Only&apos;),
			INCLUDES(Debit_Card_Services__c,&apos;Pharmacy&apos;)
		),
		AND
		(
			ISPICKVAL(Type_of_HRA__c,&apos;Auto-Pay Provider Only&apos;),
			INCLUDES(Covered_Services__c,&apos;Rx&apos;)
                ),
                AND
		(
			ISPICKVAL(Type_of_HRA__c,&apos;Provider Pay Medical with Optional Rx/Dental/Vision Debit Card&apos;),
			INCLUDES(Covered_Services__c,&apos;Rx&apos;)

		),
		ISPICKVAL(Type_of_HRA__c,&apos;Combination (not recommended)&apos;)	
	)
	,
	&apos;YES&apos;,&apos;NO&apos;	
)</formula>
        <label>Is RX Covered Under HRA?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Medical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider Pay</fullName>
                </value>
                <value>
                    <fullName>Member Pay (Debit Card)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Responsibility_by_Claim__c</fullName>
        <label>Member Responsibility by Claim</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Rollover_Amount__c</fullName>
        <label>Minimum Rollover Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonSplit_Covered_Services__c</fullName>
        <label>NonSplit Covered Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Pay Medical</fullName>
                </value>
                <value>
                    <fullName>In Network Medical Deductible</fullName>
                </value>
                <value>
                    <fullName>In Network Coinsurance</fullName>
                </value>
                <value>
                    <fullName>Out of Network Medical Deductible</fullName>
                </value>
                <value>
                    <fullName>Out of Network Coinsurance</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pharmacy__c</fullName>
        <label>Pharmacy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider Pay</fullName>
                </value>
                <value>
                    <fullName>Member Pay (Debit Card)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Trustee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Trustee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QLI</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>HRA Administrations</relationshipLabel>
        <relationshipName>HRA_Administrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rollover_Cap_Tiers__c</fullName>
        <label>Rollover Cap Tiers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 Tier</fullName>
                </value>
                <value>
                    <fullName>3 Tier</fullName>
                </value>
                <value>
                    <fullName>4 Tier</fullName>
                </value>
                <value>
                    <fullName>5 Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rollover_Different_Admin__c</fullName>
        <label>Rollover Different Admin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rollover_Percent_Value__c</fullName>
        <label>Rollover Percent Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rx_Debit_card__c</fullName>
        <label>Rx Debit Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental (Debit Card)</fullName>
                </value>
                <value>
                    <fullName>Vision (Debit Card)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_Percentage_Covered_Services__c</fullName>
        <label>Split Percentage Covered Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Pay Medical</fullName>
                </value>
                <value>
                    <fullName>In Network Medical Deductible</fullName>
                </value>
                <value>
                    <fullName>Out of Network Medical Deductible</fullName>
                </value>
                <value>
                    <fullName>In Network Coinsurance</fullName>
                </value>
                <value>
                    <fullName>Out of Network Coinsurance</fullName>
                </value>
                <value>
                    <fullName>In Network Copays</fullName>
                </value>
                <value>
                    <fullName>Out of Network Copays</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terminated_can_submit_claims_for__c</fullName>
        <label>Terminated can submit claims for</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>90 Days (Standard)</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_HRA__c</fullName>
        <label>Type of HRA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member Pay (debit card) Only</fullName>
                </value>
                <value>
                    <fullName>Auto-Pay Provider Only</fullName>
                </value>
                <value>
                    <fullName>Provider Pay Medical with Optional Rx/Dental/Vision Debit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpFrontDedEA__c</fullName>
        <label>UpFrontDedEA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpFrontDedEEChildren__c</fullName>
        <label>UpFrontDedEEChildren</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpFrontDedFamily__c</fullName>
        <label>UpFrontDedFamily</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Up_Front_Deductible_Tiers__c</fullName>
        <label>Up Front Deductible Tiers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 Tier</fullName>
                </value>
                <value>
                    <fullName>3 Tier</fullName>
                </value>
                <value>
                    <fullName>4 Tier</fullName>
                </value>
                <value>
                    <fullName>5 Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpfrontDedEChild__c</fullName>
        <label>UpfrontDedEChild</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpfrontDedEE__c</fullName>
        <label>UpfrontDedEE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Will_HRA_rollover_funds_ever_expire__c</fullName>
        <description>Will HRA rollover funds ever expire</description>
        <label>Will HRA rollover funds ever expire?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HRA Administration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HRA1_Group_Suffix__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HRAD-{0000}</displayFormat>
        <label>HRA Administration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRA Administrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>